--- a/5051/Content/Site.css
+++ b/5051/Content/Site.css
@@ -89,16 +89,16 @@ textarea {
     display: -webkit-flex;
     margin-top: 20px;
     width: 400px;
-    font-family: Lato;
-    font-size: 5em;
-    color: navajowhite;
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 80px;
+    color: white;
 }
 
 .unit {
     height: 100%;
     text-align: center;
     width: 35%;
-    color: navajowhite;
+    color: white;
 }
 
 .masthead {
@@ -236,37 +236,55 @@ a.navbar-brand {
 }
 
 #avatar {
-    margin-top: 30px;
-    border: 5px solid white;
+    border: 10px solid white;
     border-radius: 200px;
+    padding: 10px;
+    width: 70%;
+    height: auto;
+}
+
+#avatar-white {
+    border: 4px solid white;
+    border-radius: 150px;
+    padding: 5px;
+    height: 160px;
+    margin: 0 20px;
 }
 
 #avatar-green {
-    border: 3px solid green;
+    border: 4px solid #6dff08;
     border-radius: 150px;
+    padding: 5px;
+    height: 160px;
+    margin: 0 20px;
+}
+
+#avatarsidebar {
+    height: 540px;
+    padding-bottom:30px;
+    margin-bottom: 100px;
+    color:white;
 }
 
 #listusers {
-    height: auto;
-    background: #fcfcfc;
+    height: 600px;
     column-count: 3;
-    padding: 40px;
 }
 
 #listusers a {
-    color: darkslategrey;
-    font-size: 18px;
+    color: white;
+    font-size: 15px;
+    text-align: center;
 }
 
 .kiosk {
     opacity: 0.7;
     filter: alpha(opacity=70);
     background: #3e4444;
-    padding: 40px;
-    max-width: 1000px;
-    margin: 50px auto;
+    padding: 20px;
     border-radius: 20px;
     box-shadow: 0 4px 10px 4px rgba(62, 68, 68, .3);
+    color: white;
 }
 
 .kiosk h1{
@@ -274,7 +292,7 @@ a.navbar-brand {
 }
 
 .kiosk h2 {
-    color: white;
-    font-size: 20px;
-    font-family: Catamaran, sans-serif;
+        color: white;
+        font-size: 60px;
+        font-family: 'Ubuntu', sans-serif;
 }
