--- a/5051/Views/Kiosk/Index.cshtml
+++ b/5051/Views/Kiosk/Index.cshtml
@@ -29,10 +29,10 @@
 <div id="background2">
     <div id="container-fluid">
         <div class="row">
-            <div class="col-md-8 col-md-offset-2">
+            <div class="col-md-8 col-md-offset-2 col-sm-offset-0 col-sm-12">
                 <center><h1>Good Morning!</h1></center>
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-6 col-sm-6">
                         <div class="row">
                             <h4>Click your thumbnail to clock in/out.</h4>
                             <div id="listusers" class="kiosk">
@@ -96,7 +96,7 @@
                             <a href="#" data-toggle="modal" data-target="#logoutModal" class="btn btn-success" id="clockoutlink">Clock Out</a>
                         </div>-->
                     </div>
-                    <div class="col-md-5 col-md-offset-1">
+                    <div class="col-md-5 col-md-offset-1 col-sm-6 col-sm-offset-0">
                         <div id="row">
                             <center>
                                 <div id="clock">
