--- a/5051/Views/Kiosk/Index.cshtml
+++ b/5051/Views/Kiosk/Index.cshtml
@@ -96,7 +96,7 @@
                             <a href="#" data-toggle="modal" data-target="#logoutModal" class="btn btn-success" id="clockoutlink">Clock Out</a>
                         </div>-->
                     </div>
-                    <div class="col-md-5 col-md-offset-1 col-sm-6 col-sm-offset-0">
+                    <div class="col-md-5 col-md-offset-1 col-sm-6 col-sm-offset-0 hidden-xs">
                         <div id="row">
                             <center>
                                 <div id="clock">
