--- a/5051/Views/Student/Market.cshtml
+++ b/5051/Views/Student/Market.cshtml
@@ -28,7 +28,7 @@
             <a href="~/Student/Avatar" title="Avatar"><i class="fas fa-user" style="color:#7a553b"></i></a>
             <a href="~/Portal/Logout" title="Logout"><i class="fas fa-sign-out-alt" style="color:#7a553b"></i></a>
         </div>
-        <img src="~/Content/img/wireframe_market.png" width="800"class="img-responsive" id="wireframe-student" />
+        <img src="~/Content/img/Student Market/market_mockup2.png" width="800"class="img-responsive" id="wireframe-student" />
     </div>
 </div>
 
