--- a/5051/Views/Shared/_Layout.cshtml
+++ b/5051/Views/Shared/_Layout.cshtml
@@ -50,6 +50,10 @@
 
             <div style="background-color: #21d192;">
 
+                <div class="row">
+                    <div class="road"><hr /></div>
+                    </div>
+
                     <!-- Grid row-->
                     <div class="row">
 
@@ -67,7 +71,7 @@
                 <div class="row">
                     <div class="col-lg-12 text-center">
                         <p class="copyright text-muted small">&nbsp;&nbsp;&copy; @DateTime.Now.Year - Nova Town, all rights reserved. This website is made with <i class="fa fa-heart" aria-hidden="true"></i> by Fab5.</p>
-                   
+
                     </div>
                 </div>
             </div>
