--- a/5051/Content/Site.css
+++ b/5051/Content/Site.css
@@ -296,8 +296,10 @@ a.navbar-brand {
 
 .road {
     background: rgb(138,138,138);
-    background: linear-gradient(180deg, rgba(138,138,138,1) 0%, rgba(162,162,162,1) 50%, rgba(85,85,85,1) 100%);
-    height:110px;
+    background: linear-gradient(180deg, rgba(138,138,138,1) 0%, rgba(162,162,162,1) 50%, rgba(138,138,138,1) 100%);
+    height: 120px;
+    border-top: 5px solid white;
+    border-bottom: 5px solid white;
 }
 .road hr {
         vertical-align: middle;
