revised Contact page to hide our github

--- a/5051/Views/Home/Contact.cshtml
+++ b/5051/Views/Home/Contact.cshtml
@@ -1,16 +1,16 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
-<h2>@ViewBag.Title.</h2>
 
-<p>This system is make as a class project for Seattle University CS department Students, in conjunction with Middle College High School</p>
+<div class="container">
+    <h2>@ViewBag.Title.</h2>
 
-<a href="https://www.seattleu.edu/education/community-engagement/middle-college-high-school/">Middle College High School</a>
+    <p>This system is make as a class project for Seattle University CS department Students, in conjunction with Middle College High School</p>
 
-<br />
-<a href="https://www.seattleu.edu/">Seattle University</a>
+    <a href="https://www.seattleu.edu/education/community-engagement/middle-college-high-school/">Middle College High School</a>
 
-<p>
-    Contact: <a href="https://github.com/athena2103/5051Fab5">Fab5</a>
-</p>
+    <br />
+    <a href="https://www.seattleu.edu/">Seattle University</a>
 
+
+</div>
