changed navbar bgcolor

--- a/5051/Content/Site.css
+++ b/5051/Content/Site.css
@@ -215,7 +215,7 @@ a.navbar-brand {
 }
 
 .navbar-default {
-    background-color: rgb(33, 209, 146, 0.9);
+    background-color: rgb(33, 209, 146);
     font-size: 20px;
     color: white;
 }
