--- a/5051/Views/Shared/_Layout.cshtml
+++ b/5051/Views/Shared/_Layout.cshtml
@@ -48,7 +48,7 @@
     <footer>
         <div class="footer">
 
-            <div style="background-color: #21d192;">
+            <div style="background-color: #9b7b5f;">
 
                     <!-- Grid row-->
                     <div class="row">
