--- a/5051/Views/Home/Index.cshtml
+++ b/5051/Views/Home/Index.cshtml
@@ -16,9 +16,9 @@
         <div class="row">
             <div class="col-sm-4 col-sm-4 text-center">
                 <div class="service-box">
-                    <i class="fas fa-4x fa-gamepad"></i>
+                    <i class="fas fa-5x fa-gamepad" style="color:#b55d1e"></i>
                     <h3>Play Game</h3>
-                    <p class="text-muted">Student game and report information. How to play and use.</p>
+                    <p class="text-muted">Student report and game. <br/>How to view and play.</p>
                     <p>
                         @Html.ActionLink("Student Intro", "StudentIntro", "Home", null, new { @class = "btn btn-primary" })
                     </p>
@@ -26,9 +26,9 @@
             </div>
             <div class="col-sm-4 col-sm-4 text-center">
                 <div class="service-box">
-                    <i class="fas fa-4x fa-file-alt"></i>
+                    <i class="fas fa-5x fa-file-alt" style="color:#b55d1e"></i>
                     <h3>Build Reports</h3>
-                    <p class="text-muted">Teacher reports with attendance information. How to use. </p>
+                    <p class="text-muted">Teacher attendance reports. <br />How to view and modify. </p>
                     <p>
                         @Html.ActionLink("Teacher Intro", "AdminIntro", "Home", null, new { @class = "btn btn-primary" })
                     </p>
@@ -36,9 +36,9 @@
             </div>
             <div class="col-sm-4 col-sm-4 text-center">
                 <div class="service-box">
-                    <i class="fas fa-4x fa-laptop"></i>
+                    <i class="fas fa-5x fa-laptop" style="color:#b55d1e"></i>
                     <h3>Login to Kiosk</h3>
-                    <p class="text-muted">Kiosk information. How to login and use.</p>
+                    <p class="text-muted">Daily kiosk.<br /> How to login.</p>
                     <p>
                         @Html.ActionLink("Kiosk Intro", "KioskIntro", "Home", null, new { @class = "btn btn-primary" })
                     </p>
