--- a/5051/Content/Site.css
+++ b/5051/Content/Site.css
@@ -40,7 +40,7 @@
 
 
 body {
-    background: #3f3f3f;
+    background: #666666;
     padding-bottom: 20px;
     padding-top: 80px;
     font-family: 'Ubuntu', sans-serif;
