--- a/5051/Views/Kiosk/Landing.cshtml
+++ b/5051/Views/Kiosk/Landing.cshtml
@@ -10,7 +10,7 @@
 
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>Enter admin passphase to unlock Kiosk form.</h1>
+                    <h1>Enter admin passphase to unlock Kiosk Mode.</h1>
                 </div>
 
             </div>
